<resources>
    <string name="app_name">Control de procesos administrativos</string>
    <string name="codEscuela">codEscuela</string>
    <string name="nombre">Nombre</string>
    <string name="opciones">opciones</string>
    <string name="insertar">Insertar</string>
    <string name="limpiar">Limpiar</string>
    <string name="consultar">Consultar</string>
    <string name="eliminar">Eliminar</string>
    <string name="carnet">carnet</string>
    <string name="correo">correo</string>
    <string name="tipo">tipo</string>
    <string name="sesion">sesion</string>
    <string name="contrasena">Contraseña</string>
    <string name="idUsuario">idUsuario</string>
    <string name="actualizar">Actualizar</string>
    <string name="idDocente">idDocente</string>
    <string name="id">id</string>
    <string name="idEncargado">idEncargado</string>
    <string name="NumeroEvaluacion">NumeroEvaluacion</string>
    <string name="nota">nota</string>
    <string name="idRespuesta">idRespuestaSociedad</string>
    <string name="acceder">Acceder</string>
    <string name="username">Correo o carnet</string>
    <string name="idCiclo">ID de ciclo</string>
    <string name="numCiclo">Número de ciclo</string>
    <string name="anio">Año</string>
    <string name="result">Resultado: </string>
    <string name="codMateria">Código de materia</string>
    <string name="codSchool">Código de escuela</string>
    <string name="numReservacion">Número de reservación</string>
    <string name="local">Local</string>
    <string name="docente">Docente</string>
    <string name="horaInicio">Hora de inicio</string>
    <string name="horaFin">Hora de fin</string>
    <string name="fecha">Fecha</string>
    <string name="numSolicitud">Número de solicitud</string>
    <string name="idExamen">ID de examen</string>
    <string name="idRazon">ID de razón</string>
    <string name="nuevaNota">Nueva nota</string>
    <string name="estadoAP">Estado de aprobación</string>
    <string name="idMatricula">idMatricula</string>
    <string name="idCargo">idCargo</string>
    <string name="NombreCargo">NombreCargo</string>
    <string name="idLocal">idLocal</string>
    <string name="Nombre">Nombre</string>
</resources>
