<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="2" >
    <TableRow>
        <TextView android:text="@string/carnet"/>
        <EditText
            android:id="@+id/editCarnet"
            android:inputType="text"
            android:maxLength="7"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombre" />
        <EditText
            android:id="@+id/editNombre"
            android:inputType="text"
            android:maxLength="30"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/contrasena" />
        <EditText
            android:id="@+id/editContrasena"
            android:inputType="text"
            android:maxLength="30"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/correo" />
        <EditText
            android:id="@+id/editCorreo"
            android:inputType="text"
            android:maxLength="30"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/tipo" />
        <EditText
            android:id="@+id/editTipo"
            android:inputType="text"
            android:maxLength="30"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/sesion" />
        <EditText
            android:id="@+id/editSesion"
            android:inputType="text"
            android:maxLength="30"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </TableRow>


    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarEstudiante"
            android:text="@string/insertar"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"
            style="?android:attr/buttonBarButtonStyle" />
    </TableRow>
</TableLayout>