<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/NumeroEvaluacion"/>
        <EditText
            android:id="@+id/editNumEva"
            android:inputType="text"
            android:maxLength="7"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/carnet" />
        <EditText
            android:id="@+id/editCarnet"
            android:inputType="text"
            android:maxLength="30"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nota" />
        <EditText
            android:id="@+id/editNota"
            android:inputType="text"
            android:maxLength="30"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </TableRow>


    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarExamenIndividual"
            android:text="@string/insertar"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"
            style="?android:attr/buttonBarButtonStyle" />
    </TableRow>
</TableLayout>